<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quienessomos_titulo"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:id="@+id/titulo">
    </TextView>

    <TextView
        android:id="@+id/parrafo_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/quienessomos_text1"
        android:textSize="22sp">

    </TextView>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parrafo_1"
        android:id="@+id/parrafo_2"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/quienessomos_text2"
        android:textSize="22sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parrafo_2"
        android:id="@+id/parrafo_3"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="22sp"
        android:text="@string/quienessomos_text3"
        >

    </TextView>

</RelativeLayout>