<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_resumen"
        android:text="@string/resumen_titulo"
        android:textSize="26sp"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true">
    </TextView>

    <TextView
        android:id="@+id/texto_metodo_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo_resumen"
        android:text="@string/metodo_pago_titulo"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_check_24"
        android:drawablePadding="5dp"
        android:layout_marginBottom="10dp">
    </TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear_metodo_pago"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/texto_metodo_pago"
        android:paddingStart="45dp"
        android:layout_marginBottom="10dp">
    </LinearLayout>

    <TextView
        android:id="@+id/texto_direccion_envio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_metodo_pago"
        android:text="@string/titulo_direccion_envio"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_check_24"
        android:drawablePadding="5dp"
        android:layout_marginBottom="10dp">
    </TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear_direccion"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/texto_direccion_envio"
        android:paddingStart="45dp"
        android:layout_marginBottom="10dp">
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/monto_final"
        android:layout_below="@+id/linear_direccion"
        android:text="@string/monto_total"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_check_24"
        android:drawablePadding="5dp"
        android:layout_marginBottom="10dp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linear_monto"
        android:layout_below="@id/monto_final"
        android:paddingStart="45dp">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:id="@+id/footer">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
            android:text="@string/atras"
            android:layout_alignParentLeft="true"
            android:textSize="14sp"
            android:id="@+id/boton_atras">
        </Button>

        <Button
            android:id="@+id/boton_confirmar_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_compra"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/ic_baseline_check_24"
            android:drawablePadding="3dp">
        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#50000000"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progress_bar_confirmar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorWhite"/>

    </RelativeLayout>

</RelativeLayout>

