<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleCompraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Detalle de la compra"
            android:id="@+id/detalle_titulo"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:padding="10dp">
        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detalle_titulo"
            android:id="@+id/detalle_scroll"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/detalle_linear"
                android:orientation="vertical">
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detalle_scroll"
            android:id="@+id/detalle_monto_total"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monto_total"
                android:id="@+id/monto_text"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/monto"
                android:gravity="right"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:id="@+id/footer">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atras"
                android:layout_alignParentLeft="true"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
                android:id="@+id/boton_atras">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuar"
                android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
                android:layout_alignParentRight="true"
                android:textSize="14sp"
                android:id="@+id/boton_confirmar_compra">
            </Button>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>